# adaptus-mcp-server

./: .gitignore  AGENTS.md  LICENSE  README.md  Technical-Design-Document-chatgpt-conversation-2025-11-22-14-38-38.md  pyproject.toml
.github/workflows/: adaptus-scan.yml  ci.yml
examples/: usage_examples.md
openspec/: README_INSTRUCTIONS.md  project.md
openspec/changes/add-config-management/: proposal.md  tasks.md
openspec/changes/add-config-management/specs/config/: spec.md
openspec/changes/add-missing-mcp-features/: tasks.md
openspec/changes/add-missing-mcp-features/specs/resources/: spec.md
openspec/changes/archive/2025-11-23-add-missing-mcp-features/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-23-add-missing-mcp-features/specs/analysis/: spec.md
openspec/changes/archive/2025-11-23-add-missing-mcp-features/specs/prompts/: spec.md
openspec/changes/archive/2025-11-23-add-missing-mcp-features/specs/tools/: spec.md
src/adaptus/: __init__.py  server.py
src/adaptus/resources/: ai_guidelines.md  guidelines.md  prompts.md
src/adaptus/templates/core/: debt-analysis.md  design-refactor.md
tests/: test_integration.py  test_server.py
